--- a/src/App.css
+++ b/src/App.css
@@ -73,7 +73,7 @@ textarea {
   border: none;
   outline: none;
   font-weight: bold;
-  font-size: 30px;
+  font-size: 25px;
   color: gray;
 }
 .inputs .input-container input {
@@ -86,24 +86,43 @@ textarea {
   width: 400px;
 }
 .case-converter {
-  padding: 10px 35px;
+  padding: 10px 70px;
+}
+.case-converter .extra-inpt {
+  position: relative;
+  border-radius: 40px;
+  overflow: hidden;
 }
 .case-converter .extra-inpt input {
   width: 100%;
   height: auto;
-  padding: 10px 20px;
+  padding: 10px 55px;
   font-weight: bold;
-  font-size: 30px;
+  font-size: 25px;
   background: darkslategrey;
   border: none;
   outline: none;
+  border-radius: 40px;
+  text-align: left;
 }
-.case-converter .extra-inpt .buttons {
+.case-converter .extra-inpt .copy-btn {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 19px 10px;
+}
+.case-converter .extra-inpt .paste-btn {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 19px 10px;
+}
+.case-converter  .buttons {
   width: 100%;
   display: flex;
   justify-content: space-between;
 }
-.case-converter .extra-inpt .buttons button {
+.case-converter .buttons button {
   padding: 10px 20px;
   cursor: pointer;
   transition: all linear 0.3s;
@@ -116,6 +135,14 @@ textarea {
 .case-converter .extra-inpt .buttons button:hover {
   background: wheat;
 }
+.modal-toggle-button {
+  padding: 8px 10px;
+  border-radius: 20px;
+}
+
+
+
+
 @media only screen and (max-width: 375px) {
   .inputs .input-container {
     width: 100%;
@@ -132,7 +159,14 @@ textarea {
     min-height: 20px;
     background: rgb(22, 22, 22);
   }
-  .case-converter .extra-inpt .buttons button {
-    padding: 10px 8px;
+  .case-converter {
+    padding: 10px 5px;
+
+  }
+  input,textarea {
+    font-size: 15px !important;
+  }
+  .case-converter .extra-inpt .copy-btn,.paste-btn {
+    padding: 10px 10px !important;
   }
 }
